--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,8 +104,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
+    "outDir": "./build"
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts"]
+  "files": [
+    "src/labeler.ts"
+  ]
 }
