create tests for logger

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "build:dev": "npx tsc --watch",
-    "lint": "npx ts-standard"
+    "lint": "npx ts-standard",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
