add whitespace test, remove accidental file

--- a/tests/all-column-configurations-are-invalid.yml
+++ b/tests/all-column-configurations-are-invalid.yml
@@ -33,6 +33,10 @@ jobs:
               {
                 "columnName": "Name",
                 "labelingRules": 3
+              },
+              {
+                "columnName": "                 ",
+                "labelingRules": []
               }
             ]
           token: ${{secrets.GITHUB_TOKEN}}
