--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/FireLemons/github-project-column-issue-labeler#readme",
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.0",
+    "@types/cli-color": "^2.0.6",
     "@types/node": "^20.10.4",
     "jest": "^29.7.0",
     "ts-standard": "^12.0.2",
