--- a/tests/column-configuration-list-contains-only-invalid-types.yml
+++ b/tests/column-configuration-list-contains-only-invalid-types.yml
@@ -23,11 +23,14 @@ jobs:
 
 # Result:
 
-# Validating Config
-#   Could not make valid column configuration from value at index: 0
-#     Column configuration must be an object
-#   Could not make valid column configuration from value at index: 1
-#     Column configuration must be an object
-#   Could not make valid column configuration from value at index: 2
-#     Column configuration must be an object
-# The list of validated configurations for columns was found to be empty
+#          Validating Config
+#            Checking column at index 0
+# Warning:     Could not make valid column configuration from value at index: 0. Skipping column.
+# Error:         Column configuration must be an object
+#            Checking column at index 1
+# Warning:     Could not make valid column configuration from value at index: 1. Skipping column.
+# Error:         Column configuration must be an object
+#            Checking column at index 2
+# Warning:     Could not make valid column configuration from value at index: 2. Skipping column.
+# Error:         Column configuration must be an object
+# Error:   Could not find any valid actions to perform from the configuration
