--- a/tests/column_label_config-is-empty-array.yml
+++ b/tests/column_label_config-is-empty-array.yml
@@ -21,5 +21,5 @@ jobs:
 
 # Result:
 
-# Validating Config
-# Could not find any valid actions to perform from the configuration
+#          Validating Config
+# Error:   Could not find any valid actions to perform from the configuration
