--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@octokit/plugin-paginate-graphql": "^4.0.0",
     "cli-color": "^2.0.3"
   }
 }
