--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   },
   "files": [
     "src/labeler.ts",
-    "src/githubActionsPrettyPrintLogger.ts",
+    "src/logger.ts",
     "src/typeChecker.ts"
   ]
 }
