refactor github api calls into class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./build"
   },
   "files": [
+    "src/githubAPIClient.ts",
     "src/labeler.ts",
     "src/logger.ts",
     "src/typeChecker.ts"
