--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.0",
     "@types/cli-color": "^2.0.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.10.4",
     "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-standard": "^12.0.2",
     "typescript": "^5.3.3"
   },
