added test for manually verifing indented output of validateConfig

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:dev": "npx tsc --watch",
     "lint": "npx ts-standard",
     "start": "node ./index.js",
-    "test": "npx jest"
+    "test": "npx jest",
+    "test:config-validation": "npx ts-node tests/validateConfigIndentationManualVerification.ts"
   },
   "repository": {
     "type": "git",
