--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
   "dependencies": {
     "cli-color": "^2.0.3",
     "octokit": "^3.1.2"
+  },
+  "ts-standard": {
+    "ignore": [
+      "**/*.js",
+      "**/*.json"
+    ]
   }
 }
