--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "npx ts-standard",
     "start": "node ./index.js",
     "test": "npx jest",
-    "test:validation-indentation": "npx ts-node tests/validateConfigIndentationManualVerification.ts"
+    "test:validation-indentation": "npx ts-node tests/validateConfigIndentationManualVerification.ts",
+    "sample-requests": "npx ts-node tests/fetchSampleRequestResponses.ts"
   },
   "repository": {
     "type": "git",
