suppress test logging by default

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build:dev": "npx tsc --watch",
     "lint": "npx ts-standard",
     "start": "node ./index.js",
-    "test": "npx jest",
+    "test": "npx jest --silent",
     "test:validation-indentation": "npx ts-node tests/validateConfigIndentationManualVerification.ts",
+    "test:verbose": "npx jest",
     "sample-requests": "npx ts-node tests/fetchSampleRequestResponses.ts"
   },
   "repository": {
